<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".presentation.tabs.basket.Basket">

    <Button
        android:id="@+id/clearBasket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:textColor="@color/purple"
        app:strokeColor = "@color/purple"
        app:strokeWidth = "1dp"
        android:text="@string/clear_basket"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listBasket"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/priceP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/purple"
            android:text="@string/full_price"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/totalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/priceP"
            android:layout_marginStart="12dp"
            android:textColor="@color/purple" />




        <Button
            android:id="@+id/addToOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/purple"
            app:strokeColor = "@color/purple"
            app:strokeWidth = "1dp"
            android:text="@string/add_order"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>





</LinearLayout>